fix: :lipstick: changed secondary text color in dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,7 @@
         --background: 7 7 7;
         --background-2: 20 20 20;
         --primary: 255 255 255;
-        --secondary: 205 205 205;
+        --secondary: 150 150 150;
         --accent: 228 208 135;
 
         --stat-green: 83 243 80;
